<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jkxy.baiduwaimai.fragment.OrderFormFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:id="@+id/relativelayout_orderform_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/orderform_header"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativelayout_orderform_header">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/relativelayout_orderform_icon">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/orderform_backgroundicon"
                android:layout_centerInParent="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_icon_me"
                android:id="@+id/iv_orderform_icon"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderform_signintip"
            android:gravity="center"
            android:layout_below="@id/relativelayout_orderform_icon"
            android:id="@+id/tv_orderform_signintip"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderform_sigininorregister"
            android:background="@drawable/orderform_semiellipsered"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_below="@id/tv_orderform_signintip"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>


</RelativeLayout>
